# space_invaders_emulator

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  THIRD_PARTY_LICENSES.txt  index.html  spaceinvaders.data  spaceinvaders.ini  spaceinvaders.js  spaceinvaders.wasm  web-build.ps1  web-build.sh  web-run.ps1  web-run.sh
.github/workflows/: deploy.yml
include/: i8080.hpp
scripts/: web-build.ps1  web-run.ps1  web-run.sh
src/: build_info.cpp  emu.cpp  emu.hpp  gui.cpp  gui.hpp  i8080.cpp  i8080.hpp  index.html  main.cpp  utils.cpp  utils.hpp  win32.cpp  win32.hpp
src/i8080/: i8080.cpp  i8080.hpp
src/web/: index.html
web/: index.html
web/scripts/: web-build.ps1  web-build.sh
web/src/: index-prejs.js  index.html
